# relibc

./: .gitlab-ci.yml  build.rs
include/: fcntl.h
include/sys/: mman.h
src/: lib.rs
src/c/: dlmalloc.c
src/crt0/src/: lib.rs
src/fcntl/src/: lib.rs
src/header/getopt/: mod.rs
src/header/libgen/: mod.rs
src/header/netdb/: mod.rs
src/header/pwd/: mod.rs
src/header/regex/: mod.rs
src/header/signal/: mod.rs
src/header/stdio/: mod.rs  scanf.rs
src/header/stdlib/: mod.rs
src/header/string/: mod.rs
src/header/sys_stat/: mod.rs
src/header/termios/: mod.rs
src/header/time/: mod.rs
src/header/unistd/: mod.rs
src/header/wchar/: mod.rs  utf8.rs
src/platform/: Cargo.toml
src/platform/src/: lib.rs
src/platform/src/macos/: mod.rs
src/signal/src/: lib.rs
src/sys_mman/src/: lib.rs  linux.rs
src/time/src/: constants.rs
tests/: Makefile
