[package]
name = "platform"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies.ralloc]
path = "../../ralloc"
default-features = false
optional = true

[target.'cfg(not(target_os = "redox"))'.dependencies]
sc = { git = "https://github.com/NilSet/syscall.rs", branch = "macos-syscall-class" }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"
